testdata/baselines/reference/submodule/compiler/constDeclarations-access5.errors.txt
constDeclarations_access_2.ts(4,1): error TS2322: Type '1' is not assignable to type '0'.


==== constDeclarations_access_2.ts (1 errors) ====
    ///<reference path='constDeclarations_access_1.ts'/>
    import m = require('./constDeclarations_access_1');
    // Errors
    m.x = 1;
    ~~~
!!! error TS2322: Type '1' is not assignable to type '0'.
    m.x += 2;
    m.x -= 3;
    m.x *= 4;
    m.x /= 5;
    m.x %= 6;
    m.x <<= 7;
    m.x >>= 8;
    m.x >>>= 9;
    m.x &= 10;
    m.x |= 11;
    m.x ^= 12;
    m
    m.x++;
    m.x--;
    ++m.x;
    --m.x;
    
    ++((m.x));
    
    m["x"] = 0;
    
    // OK
    var a = m.x + 1;
    
    function f(v: number) { }
    f(m.x);
    
    if (m.x) { }
    
    m.x;
    (m.x);
    
    -m.x;
    +m.x;
    
    m.x.toString();
    
==== constDeclarations_access_1.ts (0 errors) ====
    export const x = 0;
    